Checking gc issue...